# github-tamagotchi

./: .env.encrypted  .env.example  .env.production.encrypted  .env.staging.encrypted  .gitignore  .sops.yaml  Dockerfile  EXPERIMENT_NOTES.md  Makefile  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml  debug-kubeconfig.yml  deploy-staging.yml  promote-to-production.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
alembic/: README  env.py
alembic/versions/: 001_create_pets_table.py  002_add_images_generated_at.py  002_create_alerts_table.py  002_create_image_generation_jobs_table.py  (+34 more)
k8s/: deployment.yaml  init-db.yaml  secrets.yaml  secrets.yaml.example
specs/: admin-system.md  authentication.md  commit-streak.md  death-and-resurrection.md  image-generation.md  monitoring.md  pet-lifecycle.md  pet-personalization.md  social-and-engagement.md  team-and-org.md  zero-downtime-deployments.md
tests/: __init__.py  conftest.py  factories.py  test_alert_api.py  test_alerting.py  test_api.py  test_api_routes.py  test_badge.py  test_badge_auto_signup.py  test_comfyui.py  test_config.py  test_database.py  test_github_service.py  test_image_generation.py  test_image_job.py  test_image_queue.py  test_landing.py  test_mcp_server.py  test_metrics.py  test_models.py  test_notifier.py  test_personality.py  test_pet_logic.py  test_polling.py  test_push_notifications.py  test_skins.py  test_sprite_sheet.py  test_storage.py  test_style_picker.py  test_telemetry_exporter.py  test_webhook_api.py  test_webhook_service.py
(+190 files in other folders)
